@@ -6,5 +6,7 @@ fixtures:
     pki: https://github.com/simp/pupmod-simp-pki
     simplib: https://github.com/simp/pupmod-simp-simplib
     stdlib: https://github.com/simp/puppetlabs-stdlib
+    firewalld: https://github.com/simp/pupmod-voxpupuli-firewalld
+    simp_firewalld: https://github.com/simp/pupmod-simp-simp_firewalld
   symlinks:
     libreswan: "#{source_dir}"
