@@ -1,6 +1,6 @@
 {
   "name": "simp-libreswan",
-  "version": "3.2.1",
+  "version": "3.3.0",
   "author": "SIMP Team",
   "summary": "Manages IPSec VPN Tunnels",
   "license": "Apache-2.0",
@@ -30,6 +30,10 @@
       "version_requirement": ">= 6.0.0 < 7.0.0"
     },
     {
+      "name": "simp/simp_firewalld",
+      "version_requirement": ">= 0.1.1 < 1.0.0"
+    },
+    {
       "name": "simp/simplib",
       "version_requirement": ">= 3.5.0 < 5.0.0"
     }
@@ -39,21 +43,24 @@
       "operatingsystem": "CentOS",
       "operatingsystemrelease": [
         "6",
-        "7"
+        "7",
+        "8"
       ]
     },
     {
       "operatingsystem": "RedHat",
       "operatingsystemrelease": [
         "6",
-        "7"
+        "7",
+        "8"
       ]
     },
     {
       "operatingsystem": "OracleLinux",
       "operatingsystemrelease": [
         "6",
-        "7"
+        "7",
+        "8"
       ]
     }
   ],
